org button fixed align

--- a/styles.css
+++ b/styles.css
@@ -218,16 +218,17 @@ nav a {
 }
 
 #org-button {
-    box-shadow: 8px 8px 0 rgba(128,83,35,.2);
-    text-align: center;
+    align-items: center;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     flex-direction: row;
+}
+.button-org {
+    color: white;
+    box-shadow: 8px 8px 0 rgba(128,83,35,.2);
     background-color: black;
     margin: 100px;
     width: 700px;
 }
-.button-org {
-    color: white;
-}
+   
